@@ -1,3 +1,9 @@
+2022-09-06 Felix Salfelder <felix AT salfelder.org>
+
+	* support/cpp/gcc/Makefile.in,
+	  support/cpp/libbacktrace/Makefile.am:
+	  Revisit don't clean no-longer autogenerated files.
+
 2022-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCcse.c,
